@@ -74,19 +74,7 @@ if( not Torrus::SiteConfig::treeExists( $tree ) )
     exit 1;
 }
 
-
-# This will ensure that all databases get closed correctly
-$SIG{'TERM'} = sub
-{
-    Warn($0 . ' process terminated');
-    exit 1;
-};
-
-$SIG{'INT'} = sub
-{
-    Warn($0 . ' process interrupted');
-    exit 1;
-};
+&Torrus::DB::setSafeSignalHandlers();
 
 my $config_tree = new Torrus::ConfigTree( -TreeName => $tree, -Wait => 1 );
 if( not defined( $config_tree ) )
@@ -137,6 +125,8 @@ sub pickup_data
 
     foreach my $ctoken ( $config_tree->getChildren( $token ) )
     {
+        &Torrus::DB::checkInterrupted();
+        
         if( $config_tree->isSubtree( $ctoken ) )
         {
             pickup_data( $config_tree, $ctoken, $listing, $listParams );
