@@ -96,16 +96,7 @@ elsif( $verbose )
     Torrus::Log::setLevel('verbose');
 }
 
-# This will ensure that all databases get closed correctly
-$SIG{'TERM'} = sub
-{
-    exit 1;
-};
-
-$SIG{'INT'} = sub
-{
-    exit 1;
-};
+&Torrus::DB::setSafeSignalHandlers();
 
 if( $report )
 {
@@ -155,6 +146,8 @@ if( $genhtml )
     {
         foreach my $tree ( @trees )
         {
+            &Torrus::DB::checkInterrupted();
+            
             Verbose('Generating HTML report for tree ' . $tree);
 
             my $options = {'Tree' => $tree};
