@@ -270,6 +270,8 @@ sub storeData
     my $collector = shift;
     my $sref = shift;
 
+    &Torrus::DB::checkInterrupted();
+
     my $nTokens = scalar( keys %{$sref->{'values'}} );
 
     if( $nTokens == 0 )
@@ -283,6 +285,8 @@ sub storeData
     
     while( my($token, $valuetriple) = each( %{$sref->{'values'}} ) )
     {
+        &Torrus::DB::checkInterrupted();
+        
         my( $value, $timestamp, $interval ) = @{$valuetriple};
         my $serviceid =
             $collector->param($token, 'ext-service-id');
