@@ -154,6 +154,8 @@ sub storeData
     {
         while( my ($filename, $tokens) = each %{$sref->{'byfile'}} )
         {
+            &Torrus::DB::checkInterrupted();
+            
             if( not -e $filename )
             {
                 createRRD( $collector, $sref, $filename, $tokens );
@@ -300,6 +302,8 @@ sub createRRD
     my @OPT = ( sprintf( '--start=%d', $start ),
                 sprintf( '--step=%d', $step ) );
 
+    &Torrus::DB::checkInterrupted();
+    
     Debug("Creating RRD $filename: " . join(" ", @OPT, @DS, @RRA));
 
     semaphoreDown();
@@ -344,6 +348,8 @@ sub updateRRD
                 $ref->{$1} = 1;
             }
         }
+        
+        &Torrus::DB::checkInterrupted();
     }
 
     # First we compare the sets of datasources in our memory and in RRD file
@@ -407,6 +413,8 @@ sub updateRRD
         return;
     }
 
+    &Torrus::DB::checkInterrupted();
+
     # Build the arguments for RRDs::update.
     my $template;
     my $values;
@@ -464,6 +472,8 @@ sub updateRRD
 
     my @cmd = ( "--template=" . $template,
                 sprintf("%d%s", $avg_ts, $values) );
+
+    &Torrus::DB::checkInterrupted();
 
     if( $threadsInUse )
     {
