@@ -66,8 +66,12 @@ sub generate
     my $srvIDs = $self->{'srvexport'}->getServiceIDs();
     foreach my $serviceid ( @{$srvIDs} )
     {
+        &Torrus::DB::checkInterrupted();
+        
         my $data = $self->{'srvexport'}->getIntervalData
             ( $self->{'StartDate'}, $self->{'EndDate'}, $serviceid );
+
+        &Torrus::DB::checkInterrupted();
 
         next if scalar( @{$data} ) == 0;
         Debug('MonthlySrvUsage: Generating report for ' . $serviceid);
@@ -106,6 +110,8 @@ sub generate
             }
         }
 
+        &Torrus::DB::checkInterrupted();
+
         # Set undefined values to zero and calculate the average
 
         my $sum = Math::BigFloat->new(0);
@@ -122,6 +128,8 @@ sub generate
                 $sum += $aligned[$pos];
             }
         }
+
+        &Torrus::DB::checkInterrupted();
 
         my $avgVal = $sum / $nDatapoints;
 
@@ -195,6 +203,8 @@ sub generate
                 'units'     => $volumeUnits });
         }
     }
+
+    &Torrus::DB::checkInterrupted();
 
     $self->{'backend'}->finalize( $self->{'reportId'} );
 }
